feat: added some openapi
