# internal/domain/response.go
@@ -12,6 +12,10 @@ type ErrorResponse struct {
 	Code AppErrorCode `json:"code"`
 }
 
+type ErrorWrapper struct {
+	Error ErrorResponse `json:"error"`
+}
+
 func JSON(ctx *echo.Context, code int, data any) error {
 	return ctx.JSON(code, data)
 }
@@ -29,13 +33,13 @@ func MapAppError(ctx *echo.Context, err error) error {
 		status, ok := mapAppErr[appError.errorType]
 		if ok {
 			ctx.Logger().Debug("known app error", slog.String("error", err.Error()))
-			return JSON(ctx, status, map[string]ErrorResponse{"error": {Code: appError.code}})
+			return JSON(ctx, status, ErrorWrapper{Error: ErrorResponse{Code: appError.code}})
 		}
 		ctx.Logger().Error("unknown app error", slog.String("error", err.Error()))
 		return JSON(
 			ctx,
 			http.StatusInternalServerError,
-			map[string]ErrorResponse{"error": {Code: CodeInternalServerError}},
+			ErrorWrapper{Error: ErrorResponse{Code: CodeInternalServerError}},
 		)
 	}
 
@@ -43,6 +47,6 @@ func MapAppError(ctx *echo.Context, err error) error {
 	return JSON(
 		ctx,
 		http.StatusInternalServerError,
-		map[string]ErrorResponse{"error": {Code: CodeInternalServerError}},
+		ErrorWrapper{Error: ErrorResponse{Code: CodeInternalServerError}},
 	)
 }
